<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculategpa"
    tools:context=".CalculateGPA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:textAlignment="center">

        <include layout="@layout/back_nav_bar"/>

        <TextView
            android:id="@+id/calculategpaTitle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/calculateGPAtitle"
            android:textColor="@color/mainColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:gravity="center"
                android:text="Student Name : "
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:gravity="center"
                android:text="@string/StudentName"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:gravity="center"
                android:text="University : "
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/universityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:foregroundGravity="center"
                android:text="@string/UnversityName"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/semster1btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semster1btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />

            <Button
                android:id="@+id/semster2btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/studentdetailsmarginleft"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester2btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/semster3btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester3btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />

            <Button
                android:id="@+id/semster4btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/studentdetailsmarginleft"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester4btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/semster5btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester5btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />

            <Button
                android:id="@+id/semster6btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/studentdetailsmarginleft"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester6btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/semster7btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/studentdetailsmarginleft"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester7btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />

            <Button
                android:id="@+id/semster8btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/studentdetailsmarginleft"
                android:background="@drawable/number_border"
                android:gravity="center"
                android:text="@string/semester8btntext"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/studentdetailstextsize"
                android:textStyle="bold"
                app:backgroundTint="@color/mainColor" />
        </LinearLayout>

        <Button
            android:id="@+id/clearallresultsbtn"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_border"
            android:text="@string/clearallresults"
            android:textAlignment="center"
            android:textColor="@color/mainColor"
            android:textSize="25dp"
            android:textStyle="bold"
            app:backgroundTint="@color/mainColor" />

        <include
            layout="@layout/activity_bottom_nav_bar"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>