<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nameuniversity"
    tools:context=".NameUniversity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:textAlignment="center">

        <include layout="@layout/back_nav_bar"/>

        <TextView
            android:id="@+id/gpaTitle"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="center"
            android:text="@string/nameuniversityGPAtitle"
            android:textColor="@color/mainColor"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/yourname"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/number_border"
            android:text=""
            android:hint="@string/userstudentname"
            android:textAlignment="center"
            android:textColor="@color/inboxsecondcolor"
            android:textColorHint="@color/inboxsecondcolor"
            android:textSize="@dimen/nameuniversityinboxtextsize"
            app:backgroundTint="@color/mainColor" />

        <EditText
            android:id="@+id/university"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/number_border"
            android:text=""
            android:hint="@string/nameuniversityUniversity"
            android:textAlignment="center"
            android:textColor="@color/inboxsecondcolor"
            android:textColorHint="@color/inboxsecondcolor"
            android:textSize="@dimen/nameuniversityinboxtextsize"
            app:backgroundTint="@color/mainColor" />

        <Button
            android:id="@+id/nameuniversitysubmit"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="75dp"
            android:background="@drawable/button_border"
            android:text="@string/submittext"
            android:textAlignment="center"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/submittextsize"
            android:textStyle="bold"
            app:backgroundTint="@color/mainColor" />

        <include
            layout="@layout/activity_bottom_nav_bar"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>