<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gpamain_layout"
    tools:context=".GPAMainActivity">

    <LinearLayout
        android:id="@+id/backgroundpic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:textAlignment="center">

        <include
            android:id="@+id/mainToolBar"
            layout="@layout/main_toolbar" />

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="center"
            android:text="@string/gradesMain"
            android:textColor="@color/mainColor"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gpabtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_border"
            android:text="@string/gpabtnname"
            android:textColor="@color/mainColor"
            android:textSize="45dp"
            android:textStyle="bold"
            app:backgroundTint="@color/mainColor" />

        <Button
            android:id="@+id/gpasettingsbtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_border"
            android:backgroundTint="#EDA200"
            android:text="@string/settingsbtnname"
            android:textColor="@color/mainColor"
            android:textSize="45dp"
            android:textStyle="bold"
            app:backgroundTint="@color/mainColor" />

        <include
            layout="@layout/activity_bottom_nav_bar"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            android:id="@+id/mainNavDrawer"
            layout="@layout/main_nav_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>